--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.5.5",
+    "@mantine/dates": "^5.5.5",
+    "@mantine/form": "^5.5.5",
+    "@mantine/hooks": "^5.5.5",
+    "@mantine/next": "^5.5.5",
+    "@mantine/notifications": "^5.5.5",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.4.0",
+    "dayjs": "^1.11.5",
     "next": "12.3.1",
+    "next-auth": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -19,6 +31,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "prisma": "^4.4.0",
     "typescript": "4.8.4"
   }
 }
