--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/notifications": "^5.5.5",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.4.0",
+    "@tanstack/react-query": "^4.12.0",
     "dayjs": "^1.11.5",
     "next": "12.3.1",
     "next-auth": "^4.14.0",
